--- a/day03/Cargo.toml
+++ b/day03/Cargo.toml
@@ -1,17 +1,12 @@
 [package]
-name = "aoc2021"
+name = "day03"
 version = "0.1.0"
 edition = "2021"
-authors = ["Joseph Cooper <cooper.joseph@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[workspace]
-members = [
-	"day01",
-	"day02",
-	"day03",
-####
-]
+color-eyre = "0.5.11"
+indoc = "1.0"
+itertools = "0.10"
+bit_field = "0.10"
